# x48

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  INSTALL  MANIFEST  Makefile.am  README  autogen.sh  configure.ac  runx48.sh  version.m4  x48-0.6.4.tar.bz2
ROMs/: gxrom-l.bz2  gxrom-m.bz2  gxrom-p.bz2  gxrom-r.bz2  sxrom-a.bz2  sxrom-b.bz2  sxrom-c.bz2  sxrom-d.bz2  sxrom-e.bz2  sxrom-j.bz2
debian/: README.Debian  changelog  control  copyright  menu  rules  watch
doc/: CARDS.doc  ChangeLog  INSTALLING  ROMDump.doc  TODO
romdump/: Makefile.am  README  ROMDump  ROMDump.s
rpm/: x48.spec.in
src/: Makefile.am  X48.ad  X48.ad.h  actions.c  append.h  checkrom.c  constants.h  debugger.c  debugger.h  device.c  device.h  disasm.c  dump2rom.c  emulate.c  errors.c  errors.h  global.h  hp48.h  hp48_emu.h  hp48char.h  init.c  lcd.c  main.c  memory.c  mkcard.c  mmu.h  options.c  options.h  register.c  resources.c  resources.h  romio.c  rpl.c  rpl.h  serial.c  small.h  timer.c  timer.h  version.h  x48.man.in  (+2 more)
utils/: makeversion
